--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -43,7 +43,7 @@ span.currentStep {
 }
 
 body.login-page {
-    background-image: url('/assets/newspapers_bg.jpg');
+    background-color: gray;
 }
 
 .remember {
@@ -65,7 +65,7 @@ body.login-page {
 }
 
 .login-logo {
-    color: white;
+    color: black;
 }
 
 input[type='file'] {
