--- a/grails-app/assets/stylesheets/adminlte.css
+++ b/grails-app/assets/stylesheets/adminlte.css
@@ -25,8 +25,8 @@
   --white: #ffffff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #007bff;
-  --secondary: #6c757d;
+  --primary: #3d9970;
+  --secondary: #92a3957a;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
