--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -36,14 +36,14 @@ fieldset.buttons a {
 
 span.currentStep {
   color: white;
-  background: #007bff;
-  border: 1px solid #007bff;
+  background: #3d9970;
+  border: 1px solid #3d9970;
   padding: .5rem .75rem;
 }
 
 .pagination a {
-  border: 1px solid #007bff;
-  color: #007bff;
+  border: 1px solid #3d9970;
+  color: #3d9970;
   padding: .5rem .75rem;
 }
 
