--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -120,3 +120,7 @@ input[type='file'] {
     border-radius: 5px;
     max-width: 45%;
 }
+
+.error span.select2-selection.select2-selection--single {
+    border-color: var(--red);
+}
