--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -144,6 +144,7 @@ input[type='file'] {
 
 .img-profile {
     height: 160px;
+    width: 160px;
 }
 
 .table-ma td {
@@ -181,4 +182,10 @@ input[type='file'] {
 .user-table-photo-block img {
     height: 50px;
     width: 50px;
+}
+
+.custom-file > label {
+    line-height: 2em;
+    overflow: hidden;
+    padding-right: 4em;
 }
