--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -4,11 +4,11 @@ a, a:hover,
 }
 
 .main-sidebar {
-    background-color: #6efd1412;
+    background-color: #f5ffee;
 }
 
 .nav-item a {
-    color: black;
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .card-header > .card-tools .nav {
@@ -131,6 +131,8 @@ input[type='file'] {
 
 .breadcrumb-item {
     font-variant: small-caps;
+    text-transform: uppercase;
+    font-size: .8rem;
 }
 
 .show-html {
@@ -153,16 +155,16 @@ input[type='file'] {
 }
 
 .table-ma td.contained {
-    line-height: 1.5em;    
+    line-height: 1.5em;
 }
 
 .table-ma td.actions {
     width: 18em;
 }
 
-.manyToMany-inline {    
+.manyToMany-inline {
     display: inline;
-    list-style: none;    
+    list-style: none;
     padding: 0;
     margin: 0;
 }
