--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -191,3 +191,7 @@ input[type='file'] {
     overflow: hidden;
     padding-right: 4em;
 }
+
+.nav-tabs .nav-link.disabled {
+    color: var(--cyan);
+}
