fix (user) handling new user instances

--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -144,6 +144,10 @@ input[type='file'] {
     margin-bottom: 2em;
 }
 
+.profile-username-compact {
+    margin-bottom: 0em;
+}
+
 .img-profile {
     height: 160px;
     width: 160px;
@@ -203,4 +207,12 @@ td > form {
 img.dashboard {
     width: 7em;
     margin-bottom: .5em;
+}
+
+img.section {
+    height: 100%;
+    width: 40%;
+    opacity: .2;
+    margin: auto;
+    vertical-align: middle;
 }
