--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -223,14 +223,19 @@ ul.filters {
     padding: 0;
 }
 
+ul.filters li:first-child {
+    margin-left: .5em;
+}
+
 .filters li {
     background: var(--primary);
     border: 1px solid #cccccc;
     border-radius: .3em;
     color: var(--white);
     padding: .2em 1em;
-    display: inline;
-    margin-left: .5em;
+    display: inline-block;
+    margin-right: .5em;
+    margin-bottom: .5em;
 }
 
 .filters > li > i::before {
