fix(alerts): fixes #44 descripcion de alertas no se muestra completa

--- a/grails-app/assets/stylesheets/adminlte.css
+++ b/grails-app/assets/stylesheets/adminlte.css
@@ -18062,7 +18062,7 @@ html.maximized-card {
 .alert-primary {
   color: #ffffff;
   background: #3d9970;
-  border-color: #006fe6;
+  border-color: #3d9970;
 }
 
 .alert-default-primary {
